--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,12 @@
 [[redirects]]
-  from = "/relay-vC2c/static/*"
+  from = "/ingest/static/*"
   to = "https://us-assets.i.posthog.com/static/:splat"
   host = "us-assets.i.posthog.com"
   status = 200
   force = true
 
 [[redirects]]
-  from = "/relay-vC2c/*"
+  from = "/ingest/*"
   to = "https://us.i.posthog.com/:splat"
   host = "us.i.posthog.com"
   status = 200
