--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ SINGLESTORE_PASS="notapassword"
 SINGLESTORE_HOST=something.svc.singlestore.com
 SINGLESTORE_PORT=3333
 SINGLESTORE_DB_NAME=DRIVE_NATHAN_DB
+
+NEXT_PUBLIC_POSTHOG_KEY=phc_abcdefghijklmnopqrstuvwxyz
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
